take jetty back out of the updater
Monotone-Parent: b8ab501930f49d283dedfb6602763677fdfba192
Monotone-Revision: 0a3883671f04c83858e8270f1a917ad9c70c1b64

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-31T17:56:02

--- a/build.xml
+++ b/build.xml
@@ -205,7 +205,7 @@
             <fileset dir="." includes="**/*.java~" />
         </delete>
     </target>
-    <target name="pkg" depends="distclean, updaterWithJettyFixes, preppkg, installer" />
+    <target name="pkg" depends="distclean, updater, preppkg, installer" />
     <target name="pkgclean" depends="deletepkg-temp">
         <delete>
             <fileset dir="." includes="i2p.tar.bz2 install.jar i2pupdate.zip" />
