* Wrapper:       - Extend timeout to 20s (was 5s)       - Shorten ping interval to 5m (was 10m)
Monotone-Parent: 85435bc3fd308b83e1e73da7ba7681b13c58cf17
Monotone-Revision: b18a14492e0191201a43e46cba727491c6f7d3e5

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-03T14:18:55

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -158,8 +158,10 @@ wrapper.jvm_exit.timeout=30
 # Let's change the default from 60 to 15 seconds and see if anyone moans..
 wrapper.restart.delay=15
 
-wrapper.ping.interval=600
-wrapper.ping.timeout=605
+wrapper.ping.interval=300
+# The ping timeout must be at least 5 seconds longer than the value of wrapper.ping.interval.
+# Extend this if you are getting 'JVM appears hung' shutdowns.
+wrapper.ping.timeout=320
 
 # use the wrapper's internal timer thread.  otherwise this would 
 # force a restart of the router during daylight savings time as well
