* Eepsite:       - Quote the jetty.xml path in clients.config,         and adjust the migration function, to fix the         eepsite-won't-start bug on windows
Monotone-Parent: 8d8e0a1c54d6c41fd4933629d1195b7e82bcd754
Monotone-Revision: 350dc57a971452cf6b43377cb3cbb98a1b183e2a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-05T19:18:17

--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -20,7 +20,7 @@ clientApp.2.startOnLoad=true
 # run our own eepsite with a seperate jetty instance
 clientApp.3.main=org.mortbay.jetty.Server
 clientApp.3.name=My eepsite web server
-clientApp.3.args=eepsite/jetty.xml
+clientApp.3.args="eepsite/jetty.xml"
 clientApp.3.delay=30
 clientApp.3.startOnLoad=true
 
