* I2PTunnel:       - Make IRC Proxy non-shared, delayed-start, close-on-idle         for new users, for the anonymity benefits (see "Shared Clients,         Correlation and Collusion" http://zzz.i2p/topics/217 )       - Remove "experimental" flag on new client options     * configclients.jsp: Add full path to config file     * Add some path help in some config files
Monotone-Parent: 852e68f3caeaaea6e9b3d0a0c39cd059ae3efa36
Monotone-Revision: 3a76c7d8ba0cb960486c9f8a0943520d54528bce

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-13T22:14:07

--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -1,3 +1,9 @@
+#
+# If you have a 'split' directory installation, with configuration
+# files in ~/.i2p (Linux) or %APPDATA%\I2P (Windows), be sure to
+# edit the file in the configuration directory, NOT the install directory.
+#
+
 # fire up the web console
 clientApp.0.args=7657 ::1,127.0.0.1 ./webapps/
 clientApp.0.main=net.i2p.router.web.RouterConsoleRunner
