--- a/apps/i2psnark/i2psnark.config
+++ b/apps/i2psnark/i2psnark.config
@@ -1,1 +1,6 @@
+#
+# If you have a 'split' directory installation, with configuration
+# files in ~/.i2p (Linux) or %APPDATA%\I2P (Windows), be sure to
+# edit the file in the configuration directory, NOT the install directory.
+#
 i2psnark.dir=i2psnark
