--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -1,3 +1,9 @@
+#
+# If you have a 'split' directory installation, with configuration
+# files in ~/.i2p (Linux) or %APPDATA%\I2P (Windows), be sure to
+# edit the file in the configuration directory, NOT the install directory.
+#
+
 # eepproxy
 tunnel.0.name=eepProxy
 tunnel.0.description=HTTP proxy for browsing eepsites and the web
@@ -17,18 +23,22 @@ tunnel.0.option.i2p.streaming.connectDelay=1000
 tunnel.0.startOnLoad=true
 
 # irc
-tunnel.1.name=ircProxy
-tunnel.1.description=IRC proxy to access the anonymous irc net
+tunnel.1.name=IRC Proxy
+tunnel.1.description=IRC proxy to access the anonymous IRC network
 tunnel.1.type=ircclient
-tunnel.1.sharedClient=true
+tunnel.1.sharedClient=false
 tunnel.1.interface=127.0.0.1
 tunnel.1.listenPort=6668
 tunnel.1.targetDestination=irc.postman.i2p,irc.freshcoffee.i2p
 tunnel.1.i2cpHost=127.0.0.1
 tunnel.1.i2cpPort=7654
-tunnel.1.option.inbound.nickname=shared clients
-tunnel.1.option.outbound.nickname=shared clients
-tunnel.1.option.i2cp.reduceIdleTime=900000
+tunnel.1.option.inbound.nickname=IRC Proxy
+tunnel.1.option.outbound.nickname=IRC Proxy
+tunnel.1.option.i2cp.closeIdleTime=1200000
+tunnel.1.option.i2cp.closeOnIdle=true
+tunnel.1.option.i2cp.delayOpen=true
+tunnel.1.option.i2cp.newDestOnResume=false
+tunnel.1.option.i2cp.reduceIdleTime=600000
 tunnel.1.option.i2cp.reduceOnIdle=true
 tunnel.1.option.i2cp.reduceQuantity=1
 tunnel.1.option.i2p.streaming.connectDelay=1000
