more clean targets
Monotone-Parent: b4d190aa50d6f665f337769a29fd7b5cb0fda3be
Monotone-Revision: 4d51ad3b6ef274413711298b5e23ab5af1771847

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-15T19:51:13

--- a/apps/jetty/build.xml
+++ b/apps/jetty/build.xml
@@ -109,6 +109,13 @@
     <target name="distclean" depends="clean">
         <echo message="Not actually deleting the jetty libs (since they're so large)" />
     </target>
+    <target name="reallyclean" depends="distclean">
+        <delete dir="./jettylib" />
+    </target>
+    <target name="totallyclean" depends="clean">
+        <delete dir="./jettylib" />
+        <delete file="${jetty.filename}" />
+    </target>
     <target name="javadoc" >
         <available property="jetty.zip.available" file="${jetty.filename}" type="file" />
         <available property="jetty.zip.javadocExtracted" file="build/javadoc" type="dir" />
