* Config files: Add some encoding help     * DataHelper, Router:       - Save config files in UTF-8 rather than the default encoding,         since we read them in UTF-8     * jetty.xml: Change encoding to UTF-8     * logs.jsp: Add system encoding     * NTCP: Clean up clock skew shitlist message     * Shitlist: Clean up expire message     * WorkingDir: Ensure modified files are processed with UTF-8 encoding
Monotone-Parent: a1054974c4cf947a33e2df80abb689fb35ab3e9c
Monotone-Revision: aed1a03b446d021c067ee22ec94fb494e0d522c0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-17T22:14:39

--- a/apps/i2psnark/i2psnark.config
+++ b/apps/i2psnark/i2psnark.config
@@ -1,3 +1,4 @@
+# NOTE: This I2P config file must use UTF-8 encoding
 #
 # If you have a 'split' directory installation, with configuration
 # files in ~/.i2p (Linux) or %APPDATA%\I2P (Windows), be sure to
