--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -1,3 +1,4 @@
+# NOTE: This I2P config file must use UTF-8 encoding
 #
 # If you have a 'split' directory installation, with configuration
 # files in ~/.i2p (Linux) or %APPDATA%\I2P (Windows), be sure to
