kill deprecation warnings
Monotone-Parent: 1a3fcced1ae28b24a35236271c526379db98613f
Monotone-Revision: e8947c52586f8831e2dc019826c375175658cdb0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-20T14:35:07

--- a/apps/ministreaming/java/build.xml
+++ b/apps/ministreaming/java/build.xml
@@ -23,7 +23,8 @@
     <target name="compile" depends="depend">
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
-        <javac srcdir="./src" debug="true" deprecation="on" source="1.5" target="1.5" destdir="./build/obj" classpath="../../../core/java/build/i2p.jar" >
+        <!-- half of this is deprecated classes so turn deprecation off -->
+        <javac srcdir="./src" debug="true" deprecation="off" source="1.5" target="1.5" destdir="./build/obj" classpath="../../../core/java/build/i2p.jar" >
             <compilerarg line="${javac.compilerargs}" />
         </javac>
     </target>
