* profiles.jsp: Bulletproofing, less memory usage     * Updates: Verify zip at startup before extracting     * Wrapper: Take a couple fields out of the log so it's narrower
Monotone-Parent: de217feba52b8662ef4b06a3e1d4da7b25893ad5
Monotone-Revision: 9170821edb324086121ef9a23a9e6840136c89ba

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-21T23:36:21

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -117,8 +117,12 @@ wrapper.logfile=$SYSTEM_java_io_tmpdir/wrapper.log
 # no need for a wrapper.java.additional line too.
 #wrapper.logfile=$INSTALL_PATH/wrapper.log
 
-# Format of output for the log file.  (See docs for formats)
-wrapper.logfile.format=LPTM
+# Format of output for the log file.
+# The format consists of the tokens 'L' for log level, 'P' for prefix, 'D' for thread,
+# 'T' for time, 'Z' for millisecond time, and 'M' for message
+# Unfortunately the log timezone cannot be changed, see
+# http://www.nabble.com/Log-message-timezone-td23651317.html
+wrapper.logfile.format=TM
 
 # Log Level for log file output.  (See docs for log levels)
 wrapper.logfile.loglevel=INFO
