po script update, dont include java files in war
Monotone-Parent: 17e3cb8530647384a8d468ebd4302801d49c208a
Monotone-Revision: d40fbe3801541090772218eebbbb7485a4092baf

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-19T13:37:13

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -86,7 +86,7 @@
     <target name="war" depends="precompilejsp">
         <!-- Don't include the css in the war, the main build.xml will copy it to docs/themes/console/ -->
         <war destfile="build/routerconsole.war" webxml="../jsp/web-out.xml"
-             basedir="../jsp/" excludes="web.xml, *.css, *.java, *.jsp, web-fragment.xml">
+             basedir="../jsp/" excludes="web.xml, *.css, **/*.java, *.jsp, web-fragment.xml">
         </war>
     </target>
     <target name="precompilejsp" unless="precompilejsp.uptodate">
