* Console:       - Don't save config when checking for updates on configupdate.jsp       - Rework ConfigRestartBean and tag       - More tag fixups       - Add lang=xx for testing       - Add file for additional tagged strings
Monotone-Parent: 05277ac8fdb86b9ba15a1197f0d974acb92a6b43
Monotone-Revision: 3c0ec8e5a74e6de56c3409889537e7ad1caa5fa8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-26T21:48:46
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -101,6 +101,13 @@
         <delete file="../jsp/web-out.xml" />
         <mkdir dir="../jsp/WEB-INF/" />
         <mkdir dir="../jsp/WEB-INF/classes" />
+
+        <!-- TODO: Don't compile the following jsps, which should be used only as includes:
+           -  summary.jsp, summarynoframe.jsp, css.jsp, confignav.jsp
+           -  Is here a JspC command line switch for that?
+           -  Or should we move them to a separate directory?
+          -->
+
         <!-- there are various jspc ant tasks, but they all seem a bit flakey -->
         <java classname="org.apache.jasper.JspC" fork="true" failonerror="true">
             <classpath>
