tag and script fixups
Monotone-Parent: 8ed4c58ee9b631081204a09f8a39e3e49e2d5e0a
Monotone-Revision: 6416a3499b7666362959e13c5996a3c925a80b60

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-29T23:22:51
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
     -->
 
     <!-- You probably don't want to change anything from here down -->
+    <target name="help" depends="all" />
     <target name="all" >
         <echo message="Useful targets: " />
         <echo message="  pkg:       distclean then package everything up (installer, clean tarball, update tarball)" />
