Add "midnight" theme to the installer manifest; bump to -14.
Monotone-Parent: bb0eb1df5d7b6700cff5ad4bf9c8e533898d8221
Monotone-Revision: 255a97adec49bb360bb6738241301d3a89a1b223

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-11-09T18:00:08
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -347,6 +347,10 @@
         <copy todir="pkg-temp/docs/themes/console/light/" >
             <fileset  dir="installer/resources/themes/console/light/" />
         </copy>
+         <!-- Add midnight theme -->
+        <copy todir="pkg-temp/docs/themes/console/midnight/" >
+            <fileset  dir="installer/resources/themes/console/midnight/" />
+        </copy>        
         <!-- Add shared images.. these are subject to flux and change! -->
         <copy todir="pkg-temp/docs/themes/console/images/" >
             <fileset  dir="installer/resources/themes/console/images/" />
