* HTTP Proxy:       - Add support for error page translations       - Add support for external pages for all errors       - Fix lack of \r in error page headers       - HTML transitional fixes       - Cleanups
Monotone-Parent: 88e5d27910fe27adcc442377a5cd604b55c8353d
Monotone-Revision: 2c609e20d3a42bd6c9cc2ba56a8438991a8d89f1

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-14T15:05:44
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -333,7 +333,7 @@
         -->
         <!-- Since the logo moved, we have to update the error pages -->
         <copy todir="pkg-temp/docs/" >
-          <fileset dir="installer/resources/" includes="*-header.ht" />
+          <fileset dir="installer/resources/proxy" />
         </copy>
         <!-- make a "classic" theme -->
         <copy todir="pkg-temp/docs/themes/console/classic/" >
@@ -372,7 +372,7 @@
     <target name="prepconsoleDocs" depends="prepgeoupdate">
         <copy todir="pkg-temp/docs/" >
           <fileset dir="." includes="readme*.html" />
-          <fileset dir="installer/resources/" includes="*-header.ht" />
+          <fileset dir="installer/resources/proxy" />
         </copy>
     </target>
     <target name="consoleDocs" depends="deletepkg-temp, prepconsoleDocs">
