Move class to net.i2p.addressbook
Monotone-Parent: 09569adbb6b56de0542b8d44d5d317f31bb5a2d6
Monotone-Revision: 12cdc515675cc5768478ce9a52262fd95e0d2842

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-15T23:44:20
Monotone-Branch: i2p.i2p

--- a/apps/addressbook/web.xml
+++ b/apps/addressbook/web.xml
@@ -6,7 +6,7 @@
 <web-app>
 	<servlet>
 		<servlet-name>addressbook</servlet-name>
-		<servlet-class>addressbook.Servlet</servlet-class>
+		<servlet-class>net.i2p.addressbook.Servlet</servlet-class>
 		<init-param>
 		    <param-name>home</param-name>
 		    <param-value>./addressbook</param-value>
