Take two test scripts out of the installer
Monotone-Parent: 12cdc515675cc5768478ce9a52262fd95e0d2842
Monotone-Revision: 0ade7e0efa2ae87f11b0f2e901740fd7625a5681

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-15T23:45:39
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -286,8 +286,10 @@
         <copy file="history.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/scripts" />
         <copy file="apps/proxyscript/i2pProxy.pac" todir="pkg-temp/scripts/" />
+        <!-- test classes aren't in the jars anymore
         <copy file="core/perl/i2pbench.sh" todir="pkg-temp/scripts/" />
         <copy file="core/perl/i2ptest.sh" todir="pkg-temp/scripts/" />
+        -->
         <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
              and uncomment the following -->
         <!-- <copy file="installer/resources/toolbar.html" todir="pkg-temp/docs/" /> -->
