Some string mods and tagging and so forth; "midnight" console theme futzage.
Monotone-Parent: d6b8e99c4aee82652446fe759f45f27e0da9fbc0
Monotone-Revision: 369305db0cea95e8bd0990de7462340cac75a1f9

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-11-17T19:55:51
Monotone-Branch: i2p.i2p

--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -14,26 +14,26 @@ clientApp.0.startOnLoad=true
 
 # SAM bridge
 clientApp.1.main=net.i2p.sam.SAMBridge
-clientApp.1.name=SAM Application Bridge
+clientApp.1.name=SAM application bridge
 clientApp.1.args=sam.keys 127.0.0.1 7656 i2cp.tcp.host=127.0.0.1 i2cp.tcp.port=7654
 clientApp.1.startOnLoad=false
 
 # poke the i2ptunnels defined in i2ptunnel.config
 clientApp.2.main=net.i2p.i2ptunnel.TunnelControllerGroup
-clientApp.2.name=Application Tunnels
+clientApp.2.name=Application tunnels
 clientApp.2.args=i2ptunnel.config
 clientApp.2.startOnLoad=true
 
 # run our own eepsite with a seperate jetty instance
 clientApp.3.main=org.mortbay.jetty.Server
-clientApp.3.name=Local Anonymous I2P Webserver
+clientApp.3.name=I2P webserver (eepsite)
 clientApp.3.args="eepsite/jetty.xml"
 clientApp.3.delay=30
 clientApp.3.startOnLoad=true
 
 # load a browser pointing at the web console whenever we start up
 clientApp.4.main=net.i2p.apps.systray.UrlLauncher
-clientApp.4.name=Launch web browser and load I2P Router Console at startup
+clientApp.4.name=Open Router Console in web browser at startup
 clientApp.4.args=http://127.0.0.1:7657/index.jsp
 clientApp.4.delay=15
 clientApp.4.startOnLoad=true
