--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -6,7 +6,7 @@
 #
 
 # eepproxy
-tunnel.0.name=eepProxy
+tunnel.0.name=I2P HTTP Proxy
 tunnel.0.description=HTTP proxy for browsing eepsites and the web
 tunnel.0.type=httpclient
 tunnel.0.sharedClient=true
@@ -64,7 +64,7 @@ tunnel.2.option.i2cp.reduceQuantity=1
 tunnel.2.startOnLoad=false
 
 # local eepserver
-tunnel.3.name=eepsite
+tunnel.3.name=I2P webserver
 tunnel.3.description=My eepsite
 tunnel.3.type=httpserver
 tunnel.3.targetHost=127.0.0.1
