--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
         <echo message="  pkgWithDesktopgui: distclean then package everything up with the desktopgui" />
         <echo message="  distWithDesktopgui: pkgWithDesktopgui and javadoc" />
         <echo message="  distcleanWithDesktopgui: clean up all derived files (including desktopgui files)" />
+        <echo message="  poupdate: update the .po files for translators" />
     </target>
     <target name="debianhowto">
         <echo message="To build debian packages, you must run dpkg-buildpackage as root in the source directory. It will then run ant for you. dpkg-buildpackage is found in the 'dpkg-dev' package. Also it should work fine to use the 'fakeroot' package with dpkg-buildpackage, if you don't want to run as root. Please read 'man dpkg-buildpackage' before building any packages yourself." />
@@ -137,6 +138,9 @@
         <copy file="apps/systray/java/build/systray.jar" todir="build/" />
         <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
         <copy file="apps/addressbook/dist/addressbook.war" todir="build/" />
+    </target>
+    <target name="poupdate">
+        <ant dir="apps/routerconsole/java/" target="poupdate" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
