--- a/apps/addressbook/web.xml
+++ b/apps/addressbook/web.xml
@@ -13,4 +13,10 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+
+    <servlet-mapping> 
+      <servlet-name>addressbook</servlet-name>
+      <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
 </web-app>
