addressbook servlet cleanup
Monotone-Parent: 2c1cef7bc201f17ade5096a7b1e483fe7d460676
Monotone-Revision: 10da8c1bd49ad6a9ff22949ee9a0c0e0a064e47c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-29T17:58:24

--- a/apps/addressbook/web.xml
+++ b/apps/addressbook/web.xml
@@ -16,7 +16,7 @@
 
     <servlet-mapping> 
       <servlet-name>addressbook</servlet-name>
-      <url-pattern>/</url-pattern>
+      <url-pattern>*</url-pattern>
     </servlet-mapping>
 
 </web-app>
