* Build: Fix poupdate dependency     * Console: Add Russian option
Monotone-Parent: 341f74317ed51b761086bdf3d3be7778c27604e4
Monotone-Revision: 5192f8fa6d34fe81e76f9a70693b75b0d6fc0ec7

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-05T17:19:23
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -89,7 +89,7 @@
         <!-- jar again to get the latest messages_*.class files -->
         <jar destfile="./build/routerconsole.jar" basedir="./build/obj" includes="**/*.class" update="true" />
     </target>
-    <target name="poupdate" depends="compile">
+    <target name="poupdate" depends="build">
         <ant target="war" />
         <!-- Update the messages_*.po files.
              We need to supply the bat file for windows, and then change the fail property to true -->
